# EEGMark

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
EEGMark/: benchmark.py
benchmarks/ViT/: config.yml  environment.yml  run.sh  vit.py
benchmarks/allegro_1-gpu/: allegro.def  allegro_li.lammps  run.sh
benchmarks/allegro_4-gpu/: allegro_li.lammps  get_lammps_ns_per_day.py  li_f32_allegro_model.pth  run.sh
benchmarks/hpcc/: .gitignore  hpccinf.txt  run.sh  score.py  spack.yaml
benchmarks/julia-diffeq/: Project.toml  run.sh  system.jl
benchmarks/julia-precompile/: .gitignore  Project.toml  benchmark_precompile.jl  install.sh  run.sh
benchmarks/lammps-allegro/: .gitignore  data.LiMg.in  get_performance.py  install.sh  run.LiMg2nnmeam.in  submit.sh
benchmarks/lammps-allegro/potential_files/: meam.app  meam.lib
benchmarks/lammps-nvidia/: .gitignore  README.md  get_performance.py  install.sh  run.sh  submit.sh
benchmarks/lolcow/: install.sh  run.sh
benchmarks/qe-cpu/: Na.pbe-spn-kjpaw_psl.1.0.0.UPF  na128.scf.in  run.sh  spack.yaml
src/: benchmark.rs  configuration.rs  environment.rs  lib.rs  main.rs
src/environment/: apptainer.rs  conda.rs  generic.rs  julia.rs  spack.rs
tests/: test_benchmark.py
tests/spack_pip_demo/: run.sh  spack.yaml
