[package]
name = "eegmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.3.0", features = ["cargo"]}
dirs = "5.0.1"
lazy_static = "1.4.0"
regex = "1.8.3"
serde = {version="1.0.163", features =["derive"]}
serde_json = "1.0.96"
serde_yaml = "0.9.21"
strum = {version="0.24.1", features=["derive"]}
sysinfo = "0.29.0"
uuid = { version = "1.3.3", features = ["v4"] }
walkdir = "2.3.3"
